--- a/src/Parser.WebUI/package.json
+++ b/src/Parser.WebUI/package.json
@@ -3,9 +3,10 @@
   "scripts": {
     "postinstall": "dotnet tool restore",
     "start": "dotnet fable watch src --run webpack-dev-server",
-    "build": "dotnet fable src && webpack"
+    "build": "dotnet fable src && webpack --mode production"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^6.4.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.11.2"
